@startuml

title __ORDER's Class Diagram__\n

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.order {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.order.BJOrderPizza {
        ~ createPizza()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.order {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.order.LDOrderPizza {
        ~ createPizza()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.order {
    abstract class com.atguigu.factory.factorymethod.pizzastore.pizza.order.OrderPizza {
        + OrderPizza()
        {abstract} ~ createPizza()
        - getType()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.order {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.order.PizzaStore {
        {static} + main()
    }
  }
  

  com.atguigu.factory.factorymethod.pizzastore.pizza.order.BJOrderPizza -up-|> com.atguigu.factory.factorymethod.pizzastore.pizza.order.OrderPizza
  com.atguigu.factory.factorymethod.pizzastore.pizza.order.LDOrderPizza -up-|> com.atguigu.factory.factorymethod.pizzastore.pizza.order.OrderPizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
